# dna

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HANDOFF.txt  README.md  RECOMMENDED-SKILLS.md  RELEASING.md  SECURITY.md  mkdocs.yml  requirements-docs.txt
.claude-plugin/: marketplace.json
.claude/.claude-plugin/: plugin.json
.dna/: active-story.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: docs.yml  guards.yml  python.yml  release-cli.yml  release-client.yml  release.yml  typescript.yml
.specify/: feature.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
deploy/azure/: .dockerignore  (+8 more)
design/: dna-cloud-architecture.html
docs/: KIND-AUTHORING.md  KIND-DATA-ACCESS.md  KINDS-GUIDE.md  PORT-CONTRACT.md  QUICK-START.md  READERS-WRITERS-GUIDE.md  index.md  openapi.json
examples/shipping-a-scope/: README.md  dna.config.yaml  pyproject.toml
examples/shipping-a-scope/acme_support_bot/: __init__.py  index.mjs  package.json
examples/shipping-a-scope/acme_support_bot/.dna/support/: Genome.yaml
examples/shipping-a-scope/acme_support_bot/.dna/support/agents/: triage.yaml
scripts/: brand_guard.py  data_model_guard.py  docs_coverage_guard.py  dump_openapi.py  gen_cli_docs.py  gen_data_model_docs.py  gen_kinds_docs.py  gen_parity_matrix.py  migrate_engram.py  migrate_engram_postgres.py  migrate_lesson_learned_to_engram.py  seed_members_demo.py  seed_portfolio_demo.py  seed_workspace_one.py
(+1146 files in other folders)
